css/main.css
body {
  background-color: #f6f9fc;
  margin: 0;
}
h1, h2, p, span {
  font-family: 'Nunito Sans', sans-serif;
}
p, span {
  font-size: 18px;
  line-height: 25px;
  margin: 10px 0;
  color: #47525d;
}
ul {
  padding: 0;
}
li {
  list-style: none;
}

/* General */

.content-container {
  margin: 0 auto;
  max-width: 960px;
  padding: 75px 0;
  animation: fadein 2s, fadeup 2s;
}

.title {
  font-weight: bold;
  margin: 0;
  text-transform: uppercase;
}
.title--color-light {
  color: #ece9e8;
}
.title--size-large {
  font-size: 35px;
}
.title--size-small {
  font-size: 30px;
}
.copy--color-light {
  color: #ece9e8;
}

/* Hero */

.hero {
  background-color: #061524;
}
.hero-container {
  padding: 20px;
}

.top-bar {
  display: flex;
  justify-content: space-between;
}
.msft-logo {
  height: 30px;
  animation: throb 6s infinite;
  animation-delay: 2s;
}
.msft-logo:hover {
  animation: roll 2s;
}

.profile {
  padding: 120px 0;
}
.portrait {
  box-shadow: 0px 0px 100px rgba(255, 255, 255, .4);
}
.name {
  font-size: 40px;
  margin: 15px 0 0 0;
  color: #ece9e8;
  text-align: center;
}
.quote {
  font-size: 24px;
  margin: 0;
  opacity: .8;
  font-weight: 400;
  color: #ece9e8;
  text-align: center;
}

.bottom-bar {
  align-items: center;
  display: flex;
  justify-content: space-between;
}
.bottom-bar .link-list {
  display: flex;
  justify-content: space-between;
}
.bottom-bar .link-list li {
  margin-right: 25px;
}
.bottom-bar .link-list .link {
  color: #ece9e8;
  opacity: .7;
}
.bottom-bar .icon {
  margin-left: 15px;
  width: 25px;
}

/* Main content */

.img-tile {
  width: 250px;
  border: 1px solid #c2c2c2;
  border-radius: 3px;
  padding: 20px 0;
  box-shadow: 0px 0px 18px rgba(1, 1, 1, .4);
}

.text-img {
  display: flex;
  justify-content: space-between;
}
.text-img .text-container {
  align-self: center;
}
.text-img .img-tile {
  width: 250px;
  border: 1px solid #c2c2c2;
  padding: 20px 0;
  margin-left: 40px;
}
.text-img-reverse {
  flex-direction: row-reverse;
}
.text-img-reverse .img-tile {
  margin-right: 40px;
  margin-left: 0;
}

.imgs-container {
  display: flex;
  justify-content: flex-end;
  margin-top: 5px;
}
.imgs-container .img-tile {
  margin-left: 10px;
}

.imgs-container-reverse {
  flex-direction: row-reverse;
}
.imgs-container-reverse .img-tile {
  margin-left: 0;
  margin-right: 10px;
}

/* Resources */

.resource-text {
  text-align: center;
}
.resource-imgs {
  display: flex;
  justify-content: space-between;
  padding-top: 50px;
  text-align: center;
  font-weight: 600;
}
.resource-imgs .resource-img {
  max-width: 295px;
  border: 1px solid #c2c2c2;
  border-radius: 3px;
  padding: 5px;
  box-shadow: 0px 0px 18px rgba(1, 1, 1, .4);
}

/* Footer */

footer {
  background-color: #061524;
}

/* Animations */

@keyframes throb {
  30%, 40% { transform: scale(1); }
  40%, 50% { transform: scale(1.2); }
  50%, 60% { transform: scale(1); }
}

@keyframes roll {
  from { transform: rotate(0deg) translate(0); }
  to { transform: rotate(-360deg) translate(0); }
}

@keyframes fadein {
  from { opacity: 0; }
  to { opacity: 1; }
}

@keyframes fadeup {
  from { transform: translateY(30px); }
  to { transform: translateY(0px); }
}

/* Media queries */

@media (min-width: 700px) {

  .content {
    padding: 90px 20px;
  }

  .portrait {
    border-radius: 50%;
    display: block;
    margin: 0 auto;
    max-width: 180px;
  }

  .title--size-large {
    font-size: 50px;
  }
}

